added doodles to homepage

--- a/doodles/index.html
+++ b/doodles/index.html
@@ -5,8 +5,8 @@
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>{doodles}</title><style>
-            body{--back: #ffffff;
-                --text: #101010;
+            body{--back: #e0e0e0;
+                --text: #202020;
                 --color: #606060}
             h3{width: fit-content; display: inline;}
             h3 a{font-size: 1.5rem; padding: 8px 16px 4px; 
