--- a/doodles/15/index.html
+++ b/doodles/15/index.html
@@ -23,40 +23,40 @@
             <p>A notebook when i started drawing many black faces. at once. for once.</p>
 
         <div id="drawings">
-            <img src="000.jpg" alt, title="power lines">
-            <img src="001.jpg" alt, title="girl making waves">
-            <img src="002.jpg" alt, title="girl with backpack">
-            <img src="003.jpg" alt, title="brushing curly hair {innacurate}">
-            <img src="004.jpg" alt, title="badly drawn curly hair">
-            <img src="005.jpg" alt, title="bunched up dreads">
-            <img src="006.jpg" alt, title="assymetrical hair">
-            <img src="007.jpg" alt, title="interest divergence">
-            <img src="008.jpg" alt, title="i love dreads so much!">
-            <img src="009.jpg" alt, title="the top from the bottom">
-            <img src="010.jpg" alt, title="concerned discerned look">
-            <img src="011.jpg" alt, title="only resort {out of date}">
-            <img src="012.jpg" alt, title="pink tuxedo, white hair, dark skin">
-            <img src="013.jpg" alt, title="bright shirts">
-            <img src="014.jpg" alt, title="surprise! colors">
-            <img src="015.jpg" alt, title="guy posing in tuxedo">
-            <img src="016.jpg" alt, title="headtilt with tuxedo">
-            <img src="017.jpg" alt, title="oval eyes">
-            <img src="018.jpg" alt, title="sunset line by line">
-            <img src="019.jpg" alt, title="looking sadly at notebook">
-            <img src="020.jpg" alt, title="girl with cute dress">
-            <img src="021.jpg" alt, title="simple drawings">
-            <img src="022.jpg" alt, title="Rogê: a musician i've been listening to a bunch; one of the women in Nana Benz du Togo idk which (Izaledu anu Parus Kekeli anu Lady Apoc)">
-            <img src="023.jpg" alt, title="looking sideways in crop top">
-            <img src="024.jpg" alt, title="guy with peace sign">
-            <img src="025.jpg" alt, title="soft sideways look; detail of pointy eyes; block">
-            <img src="026.jpg" alt, title="cat with earring">
-            <img src="027.jpg" alt, title="guy with croptop again. he's probably annoyed tbh">
-            <img src="028.jpg" alt, title="sad girl; laying down in someone else's nostalgia">
-            <img src="029.jpg" alt, title="hugging pillow, looking at the distance">
-            <img src="030.jpg" alt, title="pointy hands {not too shabby!}">
-            <img src="031.jpg" alt, title="many oval eyes">
-            <img src="032.jpg" alt, title="intersections">
-            <img src="033.jpg" alt, title="more oval eyes">
+            <div class='image'><img src="000.jpg"><p>power lines</p></div>
+            <div class='image'><img src="001.jpg"><p>girl making waves</p></div>
+            <div class='image'><img src="002.jpg"><p>girl with backpack</p></div>
+            <div class='image'><img src="003.jpg"><p>brushing curly hair {innacurate}</p></div>
+            <div class='image'><img src="004.jpg"><p>badly drawn curly hair</p></div>
+            <div class='image'><img src="005.jpg"><p>bunched up sticks</p></div>
+            <div class='image'><img src="006.jpg"><p>assymetrical hair</p></div>
+            <div class='image'><img src="007.jpg"><p>interest divergence</p></div>
+            <div class='image'><img src="008.jpg"><p>i love dreads so much!</p></div>
+            <div class='image'><img src="009.jpg"><p>the top from the bottom</p></div>
+            <div class='image'><img src="010.jpg"><p>concerned discerned look</p></div>
+            <div class='image'><img src="011.jpg"><p>only resort {out of date}</p></div>
+            <div class='image'><img src="012.jpg"><p>pink tuxedo, white hair, dark skin</p></div>
+            <div class='image'><img src="013.jpg"><p>bright shirts</p></div>
+            <div class='image'><img src="014.jpg"><p>surprise! colors</p></div>
+            <div class='image'><img src="015.jpg"><p>guy posing in tuxedo</p></div>
+            <div class='image'><img src="016.jpg"><p>headtilt with tuxedo</p></div>
+            <div class='image'><img src="017.jpg"><p>oval eyes</p></div>
+            <div class='image'><img src="018.jpg"><p>sunset line by line</p></div>
+            <div class='image'><img src="019.jpg"><p>looking sadly at notebook</p></div>
+            <div class='image'><img src="020.jpg"><p>girl with cute dress</p></div>
+            <div class='image'><img src="021.jpg"><p>simple drawings</p></div>
+            <div class='image'><img src="022.jpg"><p>Rogê: a musician i've been listening to a bunch; one of the women in Nana Benz du Togo idk which (Izaledu anu Parus Kekeli anu Lady Apoc)</p></div>
+            <div class='image'><img src="023.jpg"><p>looking sideways in crop top</p></div>
+            <div class='image'><img src="024.jpg"><p>guy with peace sign</p></div>
+            <div class='image'><img src="025.jpg"><p>soft sideways look; detail of pointy eyes; block</p></div>
+            <div class='image'><img src="026.jpg"><p>cat with earring</p></div>
+            <div class='image'><img src="027.jpg"><p>guy with croptop again. he's probably annoyed tbh</p></div>
+            <div class='image'><img src="028.jpg"><p>sad girl; laying down in someone else's nostalgia</p></div>
+            <div class='image'><img src="029.jpg"><p>hugging pillow, looking at the distance</p></div>
+            <div class='image'><img src="030.jpg"><p>pointy hands {not too shabby!}</p></div>
+            <div class='image'><img src="031.jpg"><p>many oval eyes</p></div>
+            <div class='image'><img src="032.jpg"><p>intersections</p></div>
+            <div class='image'><img src="033.jpg"><p>more oval eyes</p></div>
         </div>
 
     </div></body>
