--- a/doodles/15/index.html
+++ b/doodles/15/index.html
@@ -8,21 +8,12 @@
         body{--back: #9ea2a1;
             --text: #101010;
             --color: #404040;}
-        
-        .image{break-inside: avoid;}
-        .image img{width: 100%;
-        outline:solid var(--color) 1px; outline-offset: -1px;}
-        .image p{margin: 2px 0 8px; color: var(--color)}
-        #drawings{column-count: 2; column-gap: 16px; margin-top: 20px}
-        @media only screen and (min-width: 500px){
-            #drawings{column-count: 3;}}
         </style></head>
     <body><header>
         <h1>15</h1></header>
         <nav><a href="../index">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
     <div class="main">
-        <p class="start">
-            <p>A notebook when i started drawing many black faces. at once. for once.</p>
+            <p>A notebook when i started doing anti-racism learning and drawing many black faces. at once. for once.</p>
 
         <div id="drawings">
             <div class='image'><img src="000.jpg"><p>power lines</p></div>
