--- a/doodles/index.html
+++ b/doodles/index.html
@@ -14,6 +14,9 @@
             #_15:hover {
                 background-color: #ccb184;
                 color: #130e02;}
+            #ibispaint:hover {
+            background-color: gray;
+            color: black;}
         </style></head>
     <body><header>
         <h1>doodles</h1></header>
@@ -26,5 +29,5 @@
             not ideal if your bandwidth isn't that fast.<br>
             If you wanna ask about the meaning of a drawing, you can ask on discord!
         </p><br>
-        <h3><a href="15" id="_15">15 {33}</a></h3>
+        <h3><a href="15" id="_15">15 {33}</a></h3><h3><a href="ibispaint/" id="ibispaint">ibisPaint {6}</a></h3>
 </html>
