--- a/doodles/index.html
+++ b/doodles/index.html
@@ -16,7 +16,7 @@
                 color: #130e02;}
             #ibispaint:hover {
             background-color: gray;
-            color: black;}
+            color: white;}
         </style></head>
     <body><header>
         <h1>doodles</h1></header>
