--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="/website/style.css" rel="stylesheet" type="text/css" media="all">
-        <link href="../doodles.css" rel="stylesheet" type="text/css" media="all">
+        <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>doodles{ibisPaint}</title><style>
         body {--back: white;
             --text: black;
