--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -17,13 +17,13 @@
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
             more black people!
         </p><br>
-        <div id="images">
+        <div id="drawings">
             <div class='image'><img src="quick_doodle.png"><p>simple, orange theme of girl with glasses</p></div>
             <div class='image'><img src="tuxedos!!!.png"><p>guy with dreads and a bright tuxedo</p></div>
-            <div class='image'><img src="six.jpg"><p>curly dreadlocks over shoulder {prob innacurate}</p></div>
-            <div class='image'><img src="four.jpg"><p>messy hair with cool shirt i wish existed</p></div>
-            <div class='image'><img src="three.jpg"><p>creature with cool jacket {kalyn}</p></div>
-            <div class='image'><img src="one.jpg"><p>some guy with messy hair {dingusdoodle}</p></div>
+            <div class='image'><img src="six.pnh"><p>curly dreadlocks over shoulder {prob innacurate}</p></div>
+            <div class='image'><img src="four.png"><p>messy hair with cool shirt i wish existed</p></div>
+            <div class='image'><img src="three.png"><p>creature with cool jacket {kalyn}</p></div>
+            <div class='image'><img src="one.png"><p>some guy with messy hair {dingusdoodle}</p></div>
         </div>
 
     </div></body>
