insert descriptive message

--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -19,7 +19,7 @@
         </p><br>
         <div id="drawings">
             <div class='image'><img src="quick_doodle.png"><p>simple, orange theme of girl with glasses</p></div>
-            <div class='image'><img src="tuxedos!!!.png"><p>guy with dreads and a bright tuxedo</p></div>
+            <div class='image'><img src="tuxedos.png"><p>guy with dreads and a bright tuxedo</p></div>
             <div class='image'><img src="six.pnh"><p>curly dreadlocks over shoulder {prob innacurate}</p></div>
             <div class='image'><img src="four.png"><p>messy hair with cool shirt i wish existed</p></div>
             <div class='image'><img src="three.png"><p>creature with cool jacket {kalyn}</p></div>
