--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -16,11 +16,11 @@
         <p>digital drawings made on my phone because i can't afford
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
             more black people!
-        </p><br>
+        </p>
         <div id="drawings">
             <div class='image'><img src="quick_doodle.png"><p>simple, orange theme of girl with glasses</p></div>
             <div class='image'><img src="tuxedos.png"><p>guy with dreads and a bright tuxedo</p></div>
-            <div class='image'><img src="six.pnh"><p>curly dreadlocks over shoulder {prob innacurate}</p></div>
+            <div class='image'><img src="six.png"><p>curly dreadlocks over shoulder {prob innacurate}</p></div>
             <div class='image'><img src="four.png"><p>messy hair with cool shirt i wish existed</p></div>
             <div class='image'><img src="three.png"><p>creature with cool jacket {kalyn}</p></div>
             <div class='image'><img src="one.png"><p>some guy with messy hair {dingusdoodle}</p></div>
