added old doodle buttons

--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -46,17 +46,30 @@
         </ul>
         <p>since everything else was handdrawn (except for the text), the buttons were also supposed to be handdrawn, but the contrast sucked (especially the etc button) so i scrapped it for pixel-y gifs, and changed the header accordingly.</p>
         <ul>
-            <img src="doodles/people_button.jpg" alt="people">
-            <img src="doodles/ruler_and_compass_button.jpg" alt="ruler and compass">
-            <img src="doodles/etc_button.jpg" alt="etc (the culprit)">
+            <img src="doodles/people_button.jpg" alt="original people button">
+            <img src="doodles/ruler_and_compass_button.jpg" alt="original ruler and compass button">
+            <img src="doodles/etc_button.jpg" alt="original etc button (the culprit)">
+        </ul>
+        <p>What i ended up using was these:</p>
+        <ul>
+            <img src="doodles/people.gif" alt="people button">
+            <img src="doodles/peopleheader.gif" alt="people header">
+        </ul>
+        <ul>
+            <img src="doodles/rac.gif" alt="ruler and compass button">
+            <img src="doodles/racheader.gif" alt="ruler and compass header">
+        </ul>
+        <ul>
+            <img src="doodles/etc.gif" alt="etc button">
+            <img src="doodles/etcheader.gif" alt="etc header">
         </ul>
         <p>Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.</p>
         <ul>
-            <img src="doodles/people.gif" alt="people">
-            <img src="doodles/rac.gif" alt="ruler and compass (recreation, i can't recover the original)">
-            <img src="doodles/etc.gif" alt="etc">
+            <img src="doodles/peoplesmall.gif" alt="small people button">
+            <img src="doodles/racsmall.gif" alt="small ruler and compass button (recreation, i can't recover the original)">
+            <img src="doodles/etcsmall.gif" alt="small etc button">
         </ul>
-
+        <p>But, now that i separate doodles based on the notebooks, these buttons are, sadly, obsolete now.</p>
     </details>
 
     <details id="removed pages">
