--- a/blender/index.html
+++ b/blender/index.html
@@ -11,6 +11,7 @@
             h3 a:hover {
                 background-color: var(--color);
                 color: var(--back);}
+            #cmyk{background-color: #ff0060}
             h1::before{content:'→ '}
         </style></head>
     <body><header>
@@ -23,7 +24,7 @@
             <br>Also these images (and this site) are licensed under GPLv3.
             <br>Most of these series weren't made in one sitting, mostly over months of suddenly wanting to do that one thing again.
             <br>You can see how many images each page has next to the link, so if your internet isn't too good, maybe these won't be the fastest loading times...</p><br>
-        <h3><a href="icossymetry">icossymetry (40)</a></h3><h3><a href="glass">glass (21)</a></h3><h3><a href="cmyk">cmyk (8)</a></h3><h3><a href="buttons">buttons (10)</a></h3>
+        <h3><a href="icossymetry">icossymetry (40)</a></h3><h3><a href="glass">glass (21)</a></h3><h3><a id='cmyk' href="cmyk">cmyk (8)</a></h3><h3><a href="buttons">buttons (10)</a></h3>
     
         <br><br><br><img src="shadow.png" alt="a handdrawn sphere casting a shadow" style="margin: 0; max-width: 100%; width: auto"></div></body>
 
