--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -11,7 +11,7 @@
         </style></head>
         <body><header>
             <h1>ibisPaint</h1></header>
-            <nav><a href="../index">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
+            <nav><a href="../index">back to doodles</a></nav>
         <div class="main">
         <p>digital drawings made on my phone because i can't afford
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
