--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -9,6 +9,7 @@
             summary:hover, details[open] > summary{border-color: #15c405; color: #15c405}
             .image img{max-width: 150px; height:auto; margin-right: 16px}
             .image{display: flex; margin: 24px 0; align-items: start;}
+            ul img{max-width: 100%}
         </style></head>
     <body><header>
         <h1>folder</h1></header>
@@ -52,15 +53,15 @@
         </ul>
         <p>What i ended up using was these:</p>
         <ul>
-            <img src="doodles/people.gif" alt="people button">
+            <img src="doodles/people.gif" alt="people button" style="border: solid #05a1fc min(4px, 0.75vw)">
             <img src="doodles/peopleheader.gif" alt="people header">
         </ul>
         <ul>
-            <img src="doodles/rac.gif" alt="ruler and compass button">
+            <img src="doodles/rac.gif" alt="ruler and compass button" style="border: solid #fc074c min(4px, 0.75vw)">
             <img src="doodles/racheader.gif" alt="ruler and compass header">
         </ul>
         <ul>
-            <img src="doodles/etc.gif" alt="etc button">
+            <img src="doodles/etc.gif" alt="etc button" style="border: solid #ffb400 min(4px, 0.75vw)">
             <img src="doodles/etcheader.gif" alt="etc header">
         </ul>
         <p>Also, during the 5th redesign, i tried to remake the buttons to be much smaller and easier to see, but i couldn't make it work right so i kept the big buttons.</p>
