--- a/blender/index.html
+++ b/blender/index.html
@@ -11,7 +11,7 @@
             h3 a:hover {
                 background-color: var(--color);
                 color: var(--back);}
-            #cmyk{background-color: #ff0060}
+            #cmyk:hover{background-color: #ff0060}
             h1::before{content:'→ '}
         </style></head>
     <body><header>
