--- a/doodles/index.html
+++ b/doodles/index.html
@@ -19,7 +19,7 @@
             color: white;}
         </style></head>
     <body><header>
-        <img src="doodles.gif" height="min(10vw, 2.5rem)"></header>
+        <img src="doodles.gif" style="height: min(10vw, 2.5rem)"></header>
         <nav><a href="../home">home</a></nav>
     <div class="main">
         
