--- a/blender/buttons/index.html
+++ b/blender/buttons/index.html
@@ -15,7 +15,7 @@
 
     <body><header>
         <h1>buttons</h1></header>
-        <nav><a href="#">back to top</a><div class="space"></div><a href="../">back to blender</a></nav>
+        <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
         <div class="main">
             <p>I normally make still renders, but today i felt like making buttons, so i made these as a challenge, i guess.</p><br>
                 <p>One with cubes walking:</p><img src="walking.gif" class="gif">
