--- a/blender/cmyk/index.html
+++ b/blender/cmyk/index.html
@@ -15,7 +15,7 @@
 
         <body><header>
             <h1>cmyk</h1></header>
-            <nav><a href="#">back to top</a><div class="space"></div><a href="../">back to blender</a></nav>
+            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
         <div class="main">
             <p>A bunch of renders that i wanted to make bc i love the aesthetic of CMYK!</p><br>
         <div class="image"><img src="cmyk1.png">
