--- a/blender/glass/index.html
+++ b/blender/glass/index.html
@@ -14,7 +14,7 @@
 
         <body><header>
             <h1>glass</h1></header>
-            <nav><a href="#">back to top</a><div class="space"></div><a href="../">back to blender</a></nav>
+            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
         <div class="main">
             <p>A bunch of things exploring glass and refraction; with 3 name series things.</p>
         <h2 id="basic">basic</h2>
