--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -13,7 +13,7 @@
 
         <body><header>
             <h1>icossymetry</h1></header>
-            <nav><a href="#">back to top</a><div class="space"></div><a href="../">back to blender</a></nav>
+            <nav><a href="../">back to blender</a><div class="space"></div><a href="#">back to top</a></nav>
         <div class="main">
         <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
         <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
