--- a/home.html
+++ b/home.html
@@ -6,12 +6,11 @@
         <title>→ home</title><style>
             body{--back: #040404;
             --text: #f0f0f0;
-            --color: #f0f0f0;}
+            --color: #f0f0f0; margin-top: 3rem}
             .main{display:grid; grid-auto-flow: column;
                 grid-template-columns: auto  1px auto;
-                margin: 3rem max(min(4rem, calc((100vw - 40rem) / 2)), 24px);
-                 padding: 0;
-                gap: 16px;}
+                margin: 0 max(min(4rem, calc((100vw - 40rem) / 2)), 24px);
+                padding: 0; gap: 16px;}
 
             #lastfm{text-decoration-color: #FF2424;}
             #lastfm:hover{color: #FF2424}
