--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>nowhere in particular</title><style>
             body{--back: #040404;
-                --text: #f0f0f0; margin-top: 32px}
+                --text: #f0f0f0; min-height: fit-content}
             a{font-size: min(15vw, 5rem);  font-weight: bold;
                 text-decoration: none; line-height:1}
             a::before{content: "→"; transition: all .5s cubic-bezier(.08,.82,.17,1);}
