--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             a.m:hover{color: #ff0060}
             a.y:hover{color: #ffb400}
             a:hover::before{color: var(--text)}
-            .main{margin-top: 0}
+            .main{margin-top: 32px}
         </style></head>
     <body><div class="main">
         <a class="c" href="home">nowhere</a><br>
