--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
             #bandcamp:hover{color: #20A0FF}
             #email{text-decoration-color: #999999}
             #email:hover{color: #999999}
-            #statuscafe{text-decoration-color: #F67809;}
-            #statuscafe:hover{color: #F67809;}
+            #statuscafe_link{text-decoration-color: #F67809;}
+            #statuscafe_link:hover{color: #F67809;}
             #statuscafe-username a{display: none}
             #statuscafe{margin: 8px}
 
@@ -72,7 +72,7 @@
                         <li><a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" id="spotify">spotify</a></li>
                         <li><a href="https://bandcamp.com/cvni1981" id="bandcamp">bandcamp</a></li>
                         <li>email: <a href="mailto:cvni1981@gmail.com" id="email">cvni1981@gmail.com</a></li>
-                        <li><a href="https://status.cafe/users/cvni81" id="statuscafe">status.cafe</a>: <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></li>
+                        <li><a href="https://status.cafe/users/cvni81" id="statuscafe_link">status.cafe</a>: <div id="statuscafe"><div id="statuscafe-username"></div><div id="statuscafe-content"></div></div><script src="https://status.cafe/current-status.js?name=cvni81" defer></script></li>
                     </ul>
             </details>
             </div>
