--- a/sitelog.html
+++ b/sitelog.html
@@ -14,8 +14,8 @@
             padding-left: 12px}
         </style></head>
     <body><header>
-        <h1>sitelog</h1></header>
-        <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav>
+        <h1>sitelog</h1>
+        <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav></header>
     <div class="main">
         <details id="site info"><summary>More about the site</summary><p> 
             i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>
