--- a/sitelog.html
+++ b/sitelog.html
@@ -13,9 +13,9 @@
         .entry p{margin: 4px 8px; border-left: dotted 1px var(--color); 
             padding-left: 12px}
         </style></head>
-    <body><header>
+    <body>
         <h1>sitelog</h1>
-        <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav></header>
+        <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav>
     <div class="main">
         <details id="site info"><summary>More about the site</summary><p> 
             i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>
