made .main <main>

--- a/sitelog.html
+++ b/sitelog.html
@@ -16,7 +16,7 @@
     <body>
         <h1>sitelog</h1>
         <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav>
-    <div class="main">
+    <main>
         <details id="site info"><summary>More about the site</summary><p> 
             i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>
             did my best to make it look decent on mobile, if there's something wrong, please tell me! (<a href="http://discordapp.com/users/691348576093077535" class="discord">discord</a>)<br>
@@ -221,5 +221,5 @@
                 <h2>12/8/2022 17:42</h2>
                 <p>I just added the <a href="blender">blender images</a> and now <a href="sitelog">this log</a> so i can keep better track of what i've added to the site. Also i feel like restructuring the site, the list format isn't working, i think.</p>
             </div>
-    </div></body>
+        </main></body>
 </html>
