fixed sole pages

--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
             .about{display: grid; grid-template-columns: 1fr 3fr;}
             img{margin: 0 20px 20px 0}}
         </style></head>
-    <body><header>
-        <h1><span style="color: #05a1fc">.</span><span style="color: #ff0060">.</span><span style="color: #ffb400">.</span>about the webmaster</h1></header>
+    <body>
+        <h1><span style="color: #05a1fc">.</span><span style="color: #ff0060">.</span><span style="color: #ffb400">.</span>about the webmaster</h1>
         <nav><a href="./home">home</a></nav>
-    <div class="main">
+    <main>
         
         <div class="about">
             <div style="display: flex"><img src="assets/dingus.png" alt="a simplistic drawing of me and my dingus hair" style="align-self: center; border-radius: 100%"></div>
@@ -42,5 +42,5 @@
             If you wanna chat with me, i'm absolutely open!</p>            
         <img src="assets/dingusattempts.png" alt="the times i attempted to draw the above drawing" style="margin: 20px 0 20px; max-width: 100%">
 
-    </div></body>
+    <main></body>
 </html>
