--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,10 +11,10 @@
         p:not(.start){margin: 4px 8px; border-left: dotted 1px var(--color); 
             padding-left: 12px}
         </style></head>
-    <body><header>
-        <h1>a lot of bookmarks</h1></header>
+    <body>
+        <h1>a lot of bookmarks</h1>
         <nav><a href="home">home</a><div class="space"></div><a href="#">back to top</a></nav>
-    <div class="main">
+    <main>
         <p class="start">These are a bunch of bookmarks i've collected with raindrop.io, automatically updating!<br>
         </p>
             <h2><a href="https://raindrop.io/cvni1981/anti-racism-resources-35349568">anti-racism resources!!!</a></h2><p>
@@ -50,5 +50,5 @@
             <h2><a href="https://raindrop.io/cvni1981/vntla-misc-22520747">VNTLA: Misc</a></h2><p>
                 Other videos i wanted saved related to other stuff, including memes.
             </p>
-    </div></body>
+    </main></body>
 </html>
