--- a/home.html
+++ b/home.html
@@ -59,7 +59,7 @@
                 }
         </style></head>
     <body>
-        <div class="main">
+        <main>
             <div id="info">
                 <p>Hello! Welcome to this website, we're under our... 7th redesign. Hopefully this one stays.<br>
                     There's not much here right now, we're pretty much perpetually under construction, so there'll
@@ -89,6 +89,6 @@
                 <a id="sitelog" href="sitelog"><b>→</b> sitelog</a>
             </div>
             </div>
-        </div>
+        </main>
     </body>
 </html>
