--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             a:hover::before{color: var(--text)}
             .main{margin-top: 32px}
         </style></head>
-    <body><div class="main">
+    <body><main>
         <a class="c" href="home">nowhere</a><br>
         <a class="m" href="home">in</a><br>
         <a class="y" href="home">particular</a><br>
-    </div>
+    </main>
     </body>
 </html>
