--- a/mante.html
+++ b/mante.html
@@ -13,10 +13,10 @@
         .name::selection{background-color: #5dcbfc}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
-    <body><header>
-        <h1>every ma ante server name*</h1></header>
+    <body>
+        <h1>every ma ante server name*</h1>
         <nav><a href="#">back to top</a></nav>
-    <div class="main">
+    <main>
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
                 Also this is accurate to [as long as i can keep updating this]<br>
@@ -334,5 +334,5 @@
             <li>9/6:<b> ijo </b><span class="name">the motan</span></li><br>
             <li>9/6:<b> pi </b><span class="name">kala Asi</span></li><br>
             <li>4/6:<b> manatee </b><span class="name">kala Asi</span></li><br>
-    </div></body>
+    <main></body>
 </html>
