--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
             body{--back: #040404;
             --text: #f0f0f0; min-height: fit-content;
             --color: #f0f0f0; margin-top: 3rem}
-            .main{display:grid; grid-auto-flow: column;
+            main{display:grid; grid-auto-flow: column;
                 grid-template-columns: auto  1px auto;
                 margin: 0 max(min(4rem, calc((100vw - 40rem) / 2)), 24px);
                 padding: 0; gap: 16px;}
@@ -49,7 +49,7 @@
             .divider{background-color: var(--text)}
 
             @media only screen and (max-width: 550px) {
-                .main{display:block}
+                main{display:block}
                 body{margin-top: 24px}
                 #info{width: auto}
                 h1{font-size: min(3.5rem, 15vw); margin-bottom: 0; border-bottom: none}
@@ -77,7 +77,7 @@
             </details>
             </div>
             <div class="divider"></div>
-            <div id="pages">
+            <nav id="pages">
                 <a id="about" href="about"><b>→</b> about</a>
                 <a id="bookmarks" href="bookmarks"><b>→</b> bookmarks</a>
                 <div></div>
@@ -87,8 +87,7 @@
                 <div></div>
                 <a id="buttons" href="buttons/"><b>→</b> buttons</a>
                 <a id="sitelog" href="sitelog"><b>→</b> sitelog</a>
-            </div>
-            </div>
+            </nav>
         </main>
     </body>
 </html>
