--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
             --color: #f0f0f0; margin-top: 3rem}
             main{display:grid; grid-auto-flow: column;
                 grid-template-columns: auto  1px auto;
-                margin: 0 max(min(4rem, calc((100vw - 40rem) / 2)), 24px);
+                margin: 0 max(min(4rem, calc((100vw - 40rem) / 2)) 24px);
                 padding: 0; gap: 16px;}
 
             #lastfm{text-decoration-color: #FF2424;}
@@ -25,11 +25,12 @@
             #statuscafe-username a{display: none}
             #statuscafe{margin: 8px}
 
-            #pages{display: grid; height: min-content}
-            #pages a{display:block; font-size: 2rem; height: fit-content;
+            nav{display: grid; height: min-content;
+            margin:0}
+            nav a{display:block; font-size: 2rem; height: fit-content;
                 border:bottom; padding: 8px 18px 8px 16px; text-decoration: none;
                 outline: solid 1px #00000000; outline-offset: 0;}
-            #pages div{background-color: var(--text); height: 1px; 
+            nav div{background-color: var(--text); height: 1px; 
                 width: 50%; margin: 0 auto; z-index: -1;}
 
             #about:hover{background-color: #f0f0f0; color: #2b5cb1}
@@ -53,8 +54,8 @@
                 body{margin-top: 24px}
                 #info{width: auto}
                 h1{font-size: min(3.5rem, 15vw); margin-bottom: 0; border-bottom: none}
-                #pages{margin: 0; padding: 0; width: auto; display: block}
-                #pages div{display:none}
+                nav{margin: 0; padding: 0; width: auto; display: block}
+                nav div{display:none}
                 .divider{height: 1px}
                 }
         </style></head>
@@ -77,7 +78,7 @@
             </details>
             </div>
             <div class="divider"></div>
-            <nav id="pages">
+            <nav>
                 <a id="about" href="about"><b>→</b> about</a>
                 <a id="bookmarks" href="bookmarks"><b>→</b> bookmarks</a>
                 <div></div>
