--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -11,10 +11,10 @@
             .image{display: flex; margin: 24px 0; align-items: start;}
             ul img{max-width: 100%}
         </style></head>
-    <body><header>
-        <h1>folder</h1></header>
+    <body>
+        <h1>folder</h1>
         <nav><a href="../index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
-    <div class="main">
+    <main>
         <p>You open the folder to find... more folders. 
             And a sticky note saying that basically all the html pages use other fonts, so it might take
             a bit to load them depending on your connection.
@@ -136,5 +136,5 @@
         <div class="image"><img src="images/walking2.gif">
         <p>a 3d version shortly used in the first attempt at the 7th redesign.</p></div>
     </details>
-    </div></body>
+</main></body>
 </html>
