--- a/misc/index.html
+++ b/misc/index.html
@@ -8,10 +8,10 @@
             h1::before{content: "> "}
             h2{margin-top: 16px}
         </style></head>
-    <body><header>
-        <h1>misc</h1></header>
+    <body>
+        <h1>misc</h1>
         <nav><a href="../home">home</a></nav>
-    <div class="main">
+    <main>
         <p>You wander into the basement downstairs, and see a green door in front of you.
             You can barely make out the words "NO ENTRY" in thick lines, but it's been all
             scribbled over. You enter the room, and there's no one inside. The room smells
@@ -19,11 +19,11 @@
             Before you, there is a desk with a thick folder and a notebook. It is beside a
             very scratched and at places dented wall, covered in sticky notes.
         </p>
-        <ul>
+        <nav>
             <h2><a href='journal'>open the notebook</a></h2>
             <h2><a href='folder/'>open the folder</a></h2>
             <h2><a href='wall'>look at the wall</a></h2>
             <h2><a href="../home">go back up the stairs</a></h2>
-        </ul>
-    </div></body>
+        </nav>
+    </main></body>
 </html>
