--- a/misc/wall.html
+++ b/misc/wall.html
@@ -20,10 +20,10 @@
         @media only screen and (max-width: 400px) {
             #notes{grid-template-columns: auto}}
         </style></head>
-    <body><header>
-        <h1>wall</h1></header>
+    <body>
+        <h1>wall</h1>
         <nav><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
-    <div class="main">
+    <main>
         <p>You look closer at the sticky notes on the wall. </p>
     <div id="notes">
         <div>wow these are old h</div>
@@ -52,5 +52,5 @@
         <div>Thinking optional.</div>
         <div>We're feeling pretty loopy today huh?</div>
     </div>
-    </div></body>
+</main></body>
 </html>
