--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
         </style></head>
     <body>
         <h1><span style="color: #05a1fc">.</span><span style="color: #ff0060">.</span><span style="color: #ffb400">.</span>about the webmaster</h1>
-        <nav><a href="./home">home</a></nav>
+        <nav class="top"><a href="./home">home</a></nav>
     <main>
         
         <div class="about">
