--- a/bookmarks.html
+++ b/bookmarks.html
@@ -13,7 +13,7 @@
         </style></head>
     <body>
         <h1>a lot of bookmarks</h1>
-        <nav><a href="home">home</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="home">home</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
         <p class="start">These are a bunch of bookmarks i've collected with raindrop.io, automatically updating!<br>
         </p>
