--- a/home.html
+++ b/home.html
@@ -25,8 +25,7 @@
             #statuscafe-username a{display: none}
             #statuscafe{margin: 8px}
 
-            nav{display: grid; height: min-content;
-            margin:0; padding: 0; border: none; max-width:none}
+            nav{display: grid; height: min-content;}
             nav a{display:block; font-size: 2rem; height: fit-content;
                 border:bottom; padding: 8px 18px 8px 16px; text-decoration: none;
                 outline: solid 1px #00000000; outline-offset: 0;}
