--- a/mante.html
+++ b/mante.html
@@ -15,7 +15,7 @@
         </style></head>
     <body>
         <h1>every ma ante server name*</h1>
-        <nav><a href="#">back to top</a></nav>
+        <nav class="top"><a href="#">back to top</a></nav>
     <main>
         <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
