--- a/sitelog.html
+++ b/sitelog.html
@@ -15,7 +15,7 @@
         </style></head>
     <body>
         <h1>sitelog</h1>
-        <nav><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="./home">home</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
         <details id="site info"><summary>More about the site</summary><p> 
             i made this site with Firefox in Ubuntu, with a crappy 1366x768 display<br>
