--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -13,7 +13,7 @@
         </style></head>
     <body>
         <h1>folder</h1>
-        <nav><a href="../index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="../index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
         <p>You open the folder to find... more folders. 
             And a sticky note saying that basically all the html pages use other fonts, so it might take
