--- a/misc/index.html
+++ b/misc/index.html
@@ -10,7 +10,7 @@
         </style></head>
     <body>
         <h1>misc</h1>
-        <nav><a href="../home">home</a></nav>
+        <nav class="top"><a href="../home">home</a></nav>
     <main>
         <p>You wander into the basement downstairs, and see a green door in front of you.
             You can barely make out the words "NO ENTRY" in thick lines, but it's been all
@@ -19,7 +19,7 @@
             Before you, there is a desk with a thick folder and a notebook. It is beside a
             very scratched and at places dented wall, covered in sticky notes.
         </p>
-        <nav>
+        <nav class="subpages">
             <h2><a href='journal'>open the notebook</a></h2>
             <h2><a href='folder/'>open the folder</a></h2>
             <h2><a href='wall'>look at the wall</a></h2>
