--- a/misc/journal.html
+++ b/misc/journal.html
@@ -11,7 +11,7 @@
         </style></head>
     <body>
         <h1>journal</h1>
-        <nav><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
         <p>You gingerly open the notebook, looking out for anyone that calls you out. No one did.</p>
 
