--- a/misc/wall.html
+++ b/misc/wall.html
@@ -22,7 +22,7 @@
         </style></head>
     <body>
         <h1>wall</h1>
-        <nav><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
+        <nav class="top"><a href="index">back to misc</a><div class="space"></div><a href="#">back to top</a></nav>
     <main>
         <p>You look closer at the sticky notes on the wall. </p>
     <div id="notes">
