--- a/misc/index.html
+++ b/misc/index.html
@@ -19,11 +19,11 @@
             Before you, there is a desk with a thick folder and a notebook. It is beside a
             very scratched and at places dented wall, covered in sticky notes.
         </p>
-        <nav class="subpages">
+        <nav class="subpages"><ul>
             <h2><a href='journal'>open the notebook</a></h2>
             <h2><a href='folder/'>open the folder</a></h2>
             <h2><a href='wall'>look at the wall</a></h2>
             <h2><a href="../home">go back up the stairs</a></h2>
-        </nav>
+        </ul></nav>
     </main></body>
 </html>
