fixed folder pages

--- a/misc/folder/index.html
+++ b/misc/folder/index.html
@@ -18,7 +18,7 @@
         <p>You open the folder to find... more folders. 
             And a sticky note saying that basically all the html pages use other fonts, so it might take
             a bit to load them depending on your connection.
-            And another one saying these pages may not be screenreader friendly. 
+            And another one saying these pages are not exactly screenreader friendly. 
         </p>
         <br>
     <details id="indexes">
