--- a/misc/folder/other/difference.html
+++ b/misc/folder/other/difference.html
@@ -8,10 +8,10 @@
                 --text: #f0f0f0;
                 --color: #f0f0f0;}
         </style></head>
-    <body><header>
-        <h1>about difference</h1></header>
-        <nav><a style="text-decoration: solid 1px var(--text)" href="../index">back to folder</a></nav>
-    <div class="main">
+    <body>
+        <h1>about difference</h1>
+        <nav class="top"><a style="text-decoration: solid 1px var(--text)" href="../index">back to folder</a></nav>
+    <main>
         <p>
             Difference is an important thing. It's what keeps the world going round, it gives life spice, it makes existing fun.
             <br>It'd be boring if everyone'd be the same, if nothing new happened each day, wouldn't it?
@@ -25,5 +25,5 @@
             <br><b><i>→ Everyone is equal and different, but not more or less than anyone else.</i></b>
             <br>
             <br>A bit confusing, but i hope you get it.</p>
-    </div></body>
+    </main></body>
 </html>
