--- a/doodles/ibispaint/index.html
+++ b/doodles/ibispaint/index.html
@@ -11,8 +11,8 @@
         </style></head>
         <body><header>
             <h1>ibisPaint</h1></header>
-            <nav><a href="../index">back to doodles</a></nav>
-        <div class="main">
+            <nav class="top"><a href="../index">back to doodles</a></nav>
+        <main>
         <p>digital drawings made on my phone because i can't afford
             a drawing tablet oops<br>coincided a bit with anti-racism work so there's 
             more black people!
@@ -26,5 +26,5 @@
             <div class='image'><img src="one.png"><p>some guy with messy hair {dingusdoodle}</p></div>
         </div>
 
-    </div></body>
+    </main></body>
 </html>
