--- a/doodles/15/index.html
+++ b/doodles/15/index.html
@@ -9,10 +9,10 @@
             --text: #101010;
             --color: #404040;}
         </style></head>
-    <body><header>
-        <h1>15</h1></header>
-        <nav><a href="../index">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
-    <div class="main">
+    <body>
+        <h1>15</h1>
+        <nav class="top"><a href="../index">back to doodles</a><div class="space"></div><a href="#">back to top</a></nav>
+    <main>
             <p>A notebook when i started doing anti-racism learning and drawing many black faces. at once. for once.</p>
         <div id="drawings">
             <div class='image'><img src="000.jpg"><p>power lines</p></div>
@@ -51,5 +51,5 @@
             <div class='image'><img src="033.jpg"><p>more oval eyes</p></div>
         </div>
 
-    </div></body>
+    </main></body>
 </html>
