--- a/doodles/index.html
+++ b/doodles/index.html
@@ -18,16 +18,17 @@
             background-color: gray;
             color: white;}
         </style></head>
-    <body><header>
-        <img src="doodles.gif" style="height: min(15vw, 3rem)"></header>
-        <nav><a href="../home">home</a></nav>
-    <div class="main">
+    <body>
+        <img src="doodles.gif" style="height: min(15vw, 3rem)">
+        <nav class="top"><a href="../home">home</a></nav>
+    <main>
         
         <p>Things we've drawn on notebooks (and or digitally, but much less frequently).
             We draw a bunch of different things, sometimes differing by each notebook.<br>
             Below, the numbers in the {curly brackets} indicate how many pictures are in each page (400px wide), so
             not ideal if your bandwidth isn't that fast.<br>
             If you wanna ask about the meaning of a drawing, you can ask on discord!
-        </p><br>
+        </p><br><nav>
         <h3><a href="15" id="_15">15 {33}</a></h3><h3><a href="ibispaint/" id="ibispaint">ibisPaint {6}</a></h3>
+        </nav><main></body>
 </html>
