--- a/doodles/index.html
+++ b/doodles/index.html
@@ -19,7 +19,7 @@
             color: white;}
         </style></head>
     <body>
-        <img src="doodles.gif" style="height: min(15vw, 3rem)">
+        <h1><img src="doodles.gif" alt, title="{doodles}" style="height: min(15vw, 3rem)"></h1>
         <nav class="top"><a href="../home">home</a></nav>
     <main>
         
