--- a/buttons/index.html
+++ b/buttons/index.html
@@ -38,10 +38,10 @@
             #our_buttons{grid-template-columns: auto}}
 
         </style></head>
-    <body><header>
-        <h1>buttons</h1></header>
-        <nav><a href="../home">home</a></nav>
-    <div class="main">
+    <body>
+        <h1>buttons</h1>
+        <nav class="top"><a href="../home">home</a></nav>
+    <main>
         <p>This is the place where we put buttons to other ppl's websites, be they acquaintances or
             other neat websites we think are cool, found on status.cafe.<br>If you wanna add our own
             button to your website, they're right below (200x40 button in the works)
@@ -81,5 +81,5 @@
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-variables.js"></script>
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-widget.js"></script>
             </div>
-    </div></body>
+        </main></body>
 </html>
