--- a/doodles/index.html
+++ b/doodles/index.html
@@ -8,6 +8,7 @@
             body{--back: #e0e0e0;
                 --text: #202020;
                 --color: #606060}
+            h1::before, h1::after{content: ""}
             h3{width: fit-content; display: inline;}
             h3 a{font-size: 1.5rem; padding: 8px 16px 4px; 
                 display: inline-block; text-decoration: none}
